fix spacing bug nav

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -50,7 +50,7 @@ body {
 
   /* --------- Main Section ----------*/
   .container>.sec-elements-list{
-    margin-top: -15px;
+    margin-top: -125px;
   }
 
   /* --------- Sec. create and Download list ----------*/
@@ -112,7 +112,7 @@ body {
 
   /* --------- Main Section ----------*/
   .container>.sec-elements-list{
-    margin-top: -50px;
+    margin-top: -150px;
   }
 
   /* --------- Sec. create and Download list ----------*/
