--- a/public/css/main.css
+++ b/public/css/main.css
@@ -112,7 +112,7 @@ p:hover {
 }
 /* main - Add Items */
 .container > .sec-elements-list {
-  margin-top: -25px;
+  margin-top: -130px;
 }
 .sec-insert-items-to-list {
   display: grid;
